--- a/compose.yaml
+++ b/compose.yaml
@@ -6,7 +6,7 @@ services:
     stdin_open: true
     tty: true
     ports:
-    - 8501:8501
+    - 8502:8502
     volumes:
       - sqlite-data:/database
 
@@ -14,7 +14,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: hescriptllo:1.0
+    image: script:1.0
     ports:
     - 8501:8501
     volumes:
