--- a/Dockerfile_create
+++ b/Dockerfile_create
@@ -2,14 +2,11 @@
 FROM python:3.8.12-buster
 
 # copy files to the /app folder in the container
-COPY script.py /script.py
+COPY create.py /create.py
 COPY requirements.txt /requirements.txt
-
-# set the working directory in the container to be /app
-# WORKDIR /app
 
 RUN pip install -r /requirements.txt
 
-EXPOSE 8501
+EXPOSE 8502
 
-CMD ["python","-u","script.py","--server.port", "8501"]
+CMD ["python","-u","create.py","--server.port", "8502"]
