--- a/compose.yaml
+++ b/compose.yaml
@@ -1,22 +1,34 @@
 version: '3'
 
 services:
+
   sqlite3:
     image: nouchka/sqlite3:latest
     stdin_open: true
     tty: true
     ports:
+    - 8501:8501
+    volumes:
+      - sqlite-data:/database
+    restart: always
+
+  create:
+    build:
+      context: .
+      dockerfile: Dockerfile_create
+    image: create:1.0
+    ports:
     - 8502:8502
     volumes:
       - sqlite-data:/database
 
-  script:
+  insert:
     build:
       context: .
-      dockerfile: Dockerfile
-    image: script:1.0
+      dockerfile: Dockerfile_insert
+    image: insert:1.0
     ports:
-    - 8501:8501
+    - 8503:8503
     volumes:
       - sqlite-data:/database
 
