--- a/Dockerfile_create
+++ b/Dockerfile_create
@@ -2,10 +2,10 @@
 FROM python:3.8.12-buster
 
 # copy files to the /app folder in the container
-COPY create.py /create.py
-COPY requirements.txt /requirements.txt
+COPY scripts/create.py /app/create.py
+COPY scripts/requirements.txt /app/requirements.txt
 
-RUN pip install -r /requirements.txt
+RUN pip install -r /app/requirements.txt
 
 EXPOSE 8502
 
