--- a/Dockerfile_insert
+++ b/Dockerfile_insert
@@ -2,10 +2,10 @@
 FROM python:3.8.12-buster
 
 # copy files to the /app folder in the container
-COPY insert.py /insert.py
-COPY requirements.txt /requirements.txt
+COPY scripts/insert.py /app/insert.py
+COPY scripts/requirements.txt /app/requirements.txt
 
-RUN pip install -r /requirements.txt
+RUN pip install -r /app/requirements.txt
 
 EXPOSE 8503
 
