--- a/Dockerfile_create
+++ b/Dockerfile_create
@@ -2,11 +2,11 @@
 FROM python:3.8.12-buster
 
 # copy files to the /app folder in the container
-COPY scripts/create.py /app/create.py
-COPY scripts/requirements.txt /app/requirements.txt
+COPY ./scripts/create.py /app/create.py
+COPY requirements.txt /app/requirements.txt
 
 RUN pip install -r /app/requirements.txt
 
 EXPOSE 8502
 
-CMD ["python","-u","create.py","--server.port", "8502"]
+CMD ["python","-u","/app/create.py","--server.port", "8502"]
